# lib-version

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: prerelease.yml  release.yml
src/lib_version/: __init__.py  _version.py
tests/: test_version.py
